# pyro-vision

./: .buildinfo  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CreateDS.ipynb  Dockerfile  LICENSE  Makefile  README.md  TrainWildFire.ipynb  TrainWildFire_SubSampler.ipynb  TrainWildFire_SubSampler_K2.ipynb  TrainWildFire_SubSampler_K3_V2.ipynb  changelog.html  datasets.html  genindex.html  index.html  installing.html  models.html  mypy.ini  nn.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  utils.html
.circleci/: config.yml  requirements.txt
.conda/: meta.yaml
.doctrees/: changelog.doctree  datasets.doctree  environment.pickle  index.doctree  installing.doctree  models.doctree  nn.doctree  utils.doctree
.github/: FUNDING.yml  collect_env.py  labeler.yml  validate_headers.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: builds.yml  doc-deploy.yml  docker.yml  docs.yaml  gh-page.yml  main.yml  markdown-links-config.json  markdown-links.yml  publish-docker-image.yml  pull_requests.yml  release.yml  scripts.yml  style.yml  test.yaml  tests.yml
_modules/: index.html
_modules/pyronear/datasets/: openfire.html
_modules/pyronear/models/: densenet.html  mobilenet.html  resnet.html
_modules/pyronear/utils/: collect_env.html
_modules/pyrovision/datasets/: openfire.html  wildfire.html
_modules/pyrovision/models/: densenet.html  mobilenet.html  mobilenetv3.html  resnet.html  rexnet.html  (+1 more)
_sources/: changelog.rst.txt  index.rst.txt  installing.rst.txt  models.rst.txt  nn.rst.txt
_static/: documentation_options.js
_static/css/: custom.css
api/: Makefile  README.md  pyproject.toml
api/app/: config.py  main.py  schemas.py  vision.py
api/tests/: conftest.py
demo/: app.py
docs/: requirements.txt
docs/source/: conf.py  datasets.rst  index.rst  models.rst  nn.rst  notebooks.md  utils.rst
inference/: inference.py
notebooks/: README.md
pyronear/: __init__.py
pyronear/datasets/: __init__.py  openfire.py  utils.py
pyronear/models/: __init__.py  densenet.py  mobilenet.py  resnet.py  ssresnet.py  ssresnet18.py  utils.py
pyronear/nn/: __init__.py  functional.py
pyronear/utils/: __init__.py  collect_env.py
pyrovision/: __init__.py  version.py
pyrovision/datasets/: __init__.py  openfire.py  utils.py  video_utils.py  wildfire.py
pyrovision/inference/: __init__.py  inference.cfg  pyronear_predictor.py
pyrovision/models/: __init__.py  densenet.py  mobilenet.py  mobilenetv3.py  pyronear_model.py  resnet.py  rexnet.py  ssresnet.py  utils.py
pyrovision/nn/: functional.py
pyrovision/utils/: __init__.py  collect_env.py
raspberryPi/: monitorPi.py  pyronearEngine.py
references/: README.md  clean_checkpoint.py  requirements.txt
references/classification/: README.md  fastai_train.py  requirements.txt  results.csv  test_ardeche.py  test_score.json  torch_train.py  train.py
references/detection/: README.md
references/segmentation/: README.md
scripts/: collect_env.py
test/: requirements.txt  test_datasets.py  test_datasets_utils.py  test_datasets_video_utils.py  test_datasets_wildfire.py  test_datasets_wildfireSubSampler.py  test_datasets_wildfire_frame_extractor.py  test_datasets_wildfire_split.py  test_datasets_wildfire_subsampler.py  test_headers.py  test_inference.py  test_models.py  test_nn.py  test_utils.py  wildfire_dataset.csv
test/fixtures/: SubSamplerDS.csv  subsampler.csv  wildfire_dataset.csv  wildfire_states.csv
tests/: requirements.txt  test_datasets.py  test_datasets_utils.py  test_models.py  test_models_utils.py
(+34 files in other folders)
