[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrovision"
description = "Datasets and models for wildfire detection in PyTorch"
authors = [
    {name = "Pyronear", email = "contact@pyronear.org"}
]
readme = "README.md"
requires-python = ">=3.6,<4"
license = {file = "LICENSE"}
keywords = ["pytorch", "deep learning", "vision", "cnn", "wildfire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=1.11.0,<2.0.0",
    "torchvision>=0.12.0,<1.0.0",
    "tqdm>=4.1.0",
    "requests>=2.20.0,<3.0.0",
    "pylocron>=0.2.1,<1.0.0",
    "huggingface-hub>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
]
training = [
    "wandb>=0.10.31,<1.0.0",
    "codecarbon>=2.0.0,<3.0.0",
]
quality = [
    "flake8>=3.9.0",
    "isort>=5.7.0",
    "mypy>=0.812",
    "pydocstyle[toml]>=6.0.0",
    "black>=22.1,<23.0",
    "bandit[toml]>=1.7.0,<1.8.0",
    "autoflake>=1.5.0,<2.0.0",
    "pre-commit>=2.17.0,<3.0.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "furo>=2022.3.4",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    # Indirect deps
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
]
dev = [
    # test
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
    "requests>=2.20.0",
    "torchvision>=0.4.0",
    # style
    "flake8>=3.9.0",
    "isort>=5.7.0",
    "mypy>=0.812",
    "pydocstyle[toml]>=6.0.0",
    "black>=22.1,<23.0",
    "bandit[toml]>=1.7.0,<1.8.0",
    "autoflake>=1.5.0,<2.0.0",
    "pre-commit>=2.17.0,<3.0.0",
    # docs
    "sphinx>=3.0.0,!=3.5.0",
    "furo>=2022.3.4",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "Jinja2<3.1",
]

[project.urls]
documentation = "https://pyronear.org/pyro-vision"
repository = "https://github.com/pyronear/pyro-vision"
tracker = "https://github.com/pyronear/pyro-vision/issues"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["demo*", "docs*", "notebooks*", "scripts*", "tests*"]


[tool.mypy]
files = "pyrovision/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "holocron.*",
    "torchvision.*",
    "requests.*",
    "tqdm.*",
    "PIL.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true

[tool.isort]
line_length = 120
src_paths = ["pyrovision", "tests", "references", "docs", ".github"]
skip_glob = "**/__init__.py"
known_first_party = ["app"]

[tool.pydocstyle]
select = "D300,D301,D417"
match = ".*\\.py"

[tool.coverage.run]
source = ["pyrovision"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.bandit]
exclude_dirs = [".github/collect_env.py"]
skips = ["B101"]
